[gd_scene load_steps=5 format=3 uid="uid://dsy0w02oo4l6i"]

[ext_resource type="Script" path="res://shop_item.gd" id="1_q801x"]
[ext_resource type="Texture2D" uid="uid://dpyftl8ul22w7" path="res://Art Aseets/UI/UI-Sheet.png" id="2_xfds8"]
[ext_resource type="Texture2D" uid="uid://1nuka8ut5kj" path="res://Placeholder/wood_1.png" id="3_1j5f5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wflw2"]
atlas = ExtResource("2_xfds8")
region = Rect2(3639.97, 148.795, 200.718, 185.128)

[node name="ShopItem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q801x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
texture = SubResource("AtlasTexture_wflw2")

[node name="TextureButton" type="TextureButton" parent="."]
z_index = 2
layout_mode = 0
offset_left = 24.0
offset_top = 19.0
offset_right = 179.0
offset_bottom = 164.0
texture_normal = ExtResource("3_1j5f5")
stretch_mode = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
